  * debian/rules:
  - move -Wl,--no-relax to LD_FLAGS, when building on alpha, and add
    LDFLAGS as a parameter (part of #648761)
  * debian/patches/01_double-conversion.patch:
  - add CPU(ALPHA) to the list of cpus that pass the test
    (Closes: #648761)
  * debian/patches/04_hurd-fix.patch:
  - patch by Pino Toscano <pino@debian.org> to fix FTBFS on Hurd
    (Closes: #649192)

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 15 Feb 2012 23:21:46 -0200

webkit (1.6.1-5) unstable; urgency=low

  * debian/rules:
  - also build with stabs debug symbols format when under s390x
    patch by Aurelien Jarno <aurel32@debian.org> (Closes: #637228)
  * debian/control:
  - add Breaks for midori and claws-mail-fancy-plugin versions that
    were using the private webkit_web_view_get_selected_text symbol
    (Closes: #646095)

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 01 Nov 2011 23:20:19 -0200

webkit (1.6.1-4) unstable; urgency=low

  * debian/patches/03_freebsd-fix.patch:
  - fix FreeBSD 64 bits build
  * debian/patches/04_pkgconfig-fix.patch:
  - import patch from upstream to fix pkg-config file to require the JSC
    one

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 23 Oct 2011 20:10:53 -0200

webkit (1.6.1-3) unstable; urgency=low

  * debian/patches/01_double-conversion.patch:
  - imported from upstream; fixes s390 double conversion, modified
    to also include IA64
  * debian/rules:
  - try reducing the disk space used to build webkit by using thin
    archives
  - disable silent rules to make debugging easier

 -- Gustavo Noronha Silva <kov@debian.org>  Fri, 21 Oct 2011 10:38:17 -0200

webkit (1.6.1-2) unstable; urgency=low

  * Rename source package back to webkit
  * debian/control:
  - Build-Depend on gawk, since our GNUmakefile.in has lines that are too
    long for mawk, which results in a broken GNUmakefile
  * debian/rules:
  - re-enable installing documentation

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 18 Oct 2011 09:59:20 -0200
